--- a/galaxy-mobile-sop-api/pom.xml
+++ b/galaxy-mobile-sop-api/pom.xml
@@ -11,7 +11,7 @@
 	<description />
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<dependency.project>1.0.2-SNAPSHOT</dependency.project>
+<!-- 		<dependency.project>1.0.1-SNAPSHOT</dependency.project> -->
 	</properties>
 	
 		<!-- 如有Nexus私服, 取消注释并指向正确的服务器地址. -->
