--- a/galaxy-mobile-sop-server/pom.xml
+++ b/galaxy-mobile-sop-server/pom.xml
@@ -13,7 +13,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.2.1.RELEASE</spring.version>
-		<dependency.project>1.0.2-SNAPSHOT</dependency.project>
+<!-- 		<DEPENDENCY.PROJECT>1.0.1-SNAPSHOT</DEPENDENCY.PROJECT> -->
 	</properties>
 	
 	<repositories>
