--- a/galaxy-mobile-sop-server/pom.xml
+++ b/galaxy-mobile-sop-server/pom.xml
@@ -13,7 +13,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.2.1.RELEASE</spring.version>
-		<DEPENDENCY.PROJECT>1.0.1.mobile-SNAPSHOT</DEPENDENCY.PROJECT>
+		<dependency.project>1.0.1.mobile-SNAPSHOT</dependency.project>
 	</properties>
 	
 	<repositories>
