--- a/galaxy-mobile-sop-server/pom.xml
+++ b/galaxy-mobile-sop-server/pom.xml
@@ -146,10 +146,16 @@
 				<activeByDefault>false</activeByDefault>
 			</activation>
 			<properties>
-				<!-- 数据库连接地址和数据库名 -->
+				<!-- 开发数据库 -->
+<!-- 				<jdbc.url> -->
+<!-- 					jdbc:mysql://10.9.11.232:3306/fx_db?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf8 -->
+<!-- 				</jdbc.url> -->
+
+				 <!-- 仿真数据库 -->
 				<jdbc.url>
-					jdbc:mysql://10.9.11.232:3306/fx_db?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf8
+					jdbc:mysql://10.9.11.219:3306/fx_db?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf8
 				</jdbc.url>
+				
 				<jdbc.username>fxuser</jdbc.username>
 				<jdbc.password>fxdb_Fp9EPkG2</jdbc.password>
 				<!-- 本地项目地址 -->
