--- a/galaxy-mobile-sop-server/pom.xml
+++ b/galaxy-mobile-sop-server/pom.xml
@@ -3,7 +3,8 @@
   <parent>
     <groupId>com.galaxyinternet</groupId>
     <artifactId>galaxy-mobile-sop</artifactId>
-    <version>1.0.1.mobile-SNAPSHOT</version><!-- SNAPSHOT -->
+<!--     <version>1.0.1.mobile-SNAPSHOT</version>SNAPSHOT -->
+   <version>1.0.1.mobile</version>
   </parent>
   <artifactId>galaxy-mobile-sop-server</artifactId>
   <packaging>war</packaging>
@@ -13,7 +14,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.2.1.RELEASE</spring.version>
-		<dependency.project>1.0.1.mobile-SNAPSHOT</dependency.project>
+<!-- 		<dependency.project>1.0.1.mobile-SNAPSHOT</dependency.project> -->
+            <dependency.project>1.0.1.mobile</dependency.project>  
 	</properties>
 	
 	<repositories>
