--- a/galaxy-mobile-sop-server/pom.xml
+++ b/galaxy-mobile-sop-server/pom.xml
@@ -3,8 +3,8 @@
   <parent>
     <groupId>com.galaxyinternet</groupId>
     <artifactId>galaxy-mobile-sop</artifactId>
-<!--     <version>1.0.3.mobile-SNAPSHOT</version> -->
-   <version>1.0.3.mobile</version>
+    <version>1.0.3.mobile-SNAPSHOT</version>
+<!--    <version>1.0.3.mobile</version> -->
   </parent>
   <artifactId>galaxy-mobile-sop-server</artifactId>
   <packaging>war</packaging>
@@ -14,8 +14,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.2.1.RELEASE</spring.version>
-<!-- 		<dependency.project>1.0.3.mobile-SNAPSHOT</dependency.project> -->
-            <dependency.project>1.0.3.mobile</dependency.project>  
+		<dependency.project>1.0.3.mobile-SNAPSHOT</dependency.project>
+<!--         <dependency.project>1.0.3.mobile</dependency.project>   -->
 	</properties>
 	
 	<repositories>
@@ -151,13 +151,7 @@
 				<!-- 开发数据库 -->
 				<jdbc.url>
 					jdbc:mysql://10.9.11.232:3306/fx_db?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf8
-				</jdbc.url>
-
-				 <!-- 仿真数据库 -->
-<!-- 				<jdbc.url> -->
-<!-- 					jdbc:mysql://10.9.11.219:3306/fx_db?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf8 -->
-<!-- 				</jdbc.url> -->
-				
+				</jdbc.url>				
 				<jdbc.username>fxuser</jdbc.username>
 				<jdbc.password>fxdb_Fp9EPkG2</jdbc.password>
 				<!-- 本地项目地址 -->
@@ -193,23 +187,14 @@
 				<activeByDefault>false</activeByDefault>
 			</activation>
 			<properties>
-			    <!-- 仿真数据库 -->
-<!-- 				<jdbc.url> -->
-<!-- 					jdbc:mysql://10.9.11.219:3306/fx_db?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf8 -->
-<!-- 				</jdbc.url> -->
-<!-- 			    <jdbc.username>fxuser</jdbc.username> -->
-<!--  				<jdbc.password>7EPCi4vCoZzqIcrW</jdbc.password> -->
-			    <!-- 仿真数据库 -->
-			
-			
+									
 				<!-- 数据库连接地址和数据库名 -->
 				<jdbc.url>
 					jdbc:mysql://10.9.11.234:3306/fx_db?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf8
 				</jdbc.url>
 				<jdbc.username>fxuser</jdbc.username>
 				<jdbc.password>fxdb_Fp9EPkG2</jdbc.password>
-				
-				
+							
 				<!-- 本地项目地址 -->
 				<log4j.path>${catalina.base}/logs/</log4j.path>
 				<sop.oss.tempfile.path>/data/apps/osstemp/</sop.oss.tempfile.path>
