--- a/galaxy-mobile-sop-api/pom.xml
+++ b/galaxy-mobile-sop-api/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.galaxyinternet</groupId>
     <artifactId>galaxy-mobile-sop</artifactId>
-   <version>1.0.3.mobile</version>
+    <version>1.0.3.mobile-SNAPSHOT</version>
   </parent>
   <artifactId>galaxy-mobile-sop-api</artifactId>
   <packaging>jar</packaging> 
@@ -11,7 +11,7 @@
 	<description />
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>		
-        <dependency.project>1.0.3.mobile</dependency.project>
+        <dependency.project>1.0.3.mobile-SNAPSHOT</dependency.project>
 	</properties>
 	
 		<!-- 如有Nexus私服, 取消注释并指向正确的服务器地址. -->
