--- a/galaxy-mobile-sop-server/pom.xml
+++ b/galaxy-mobile-sop-server/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.galaxyinternet</groupId>
     <artifactId>galaxy-mobile-sop</artifactId>
-   <version>1.0.3.mobile</version> 
+    <version>1.0.3.mobile-SNAPSHOT</version>
   </parent>
   <artifactId>galaxy-mobile-sop-server</artifactId>
   <packaging>war</packaging>
@@ -13,7 +13,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.2.1.RELEASE</spring.version>	
-        <dependency.project>1.0.3.mobile</dependency.project>  
+        <dependency.project>1.0.3.mobile-SNAPSHOT</dependency.project>  
 	</properties>
 	
 	<repositories>
