--- a/galaxy-mobile-sop-server/src/main/resources/xinge.properties
+++ b/galaxy-mobile-sop-server/src/main/resources/xinge.properties
@@ -3,4 +3,4 @@ andriod_secretKey=4fbcf6b12aeab0a358ab5db47e55d5e6
 ios_accessId=2200215528
 ios_secretKey=1bf0093fe972ce9f2fc144887813c076
 #prod:1 dev:2
-enviroment:2
+enviroment=${xinge.enviroment}
