--- a/galaxy-mobile-sop-server/pom.xml
+++ b/galaxy-mobile-sop-server/pom.xml
@@ -177,6 +177,8 @@
 
 				<!-- <redis.url>101.200.78.14</redis.url> <redis.port>6379</redis.port> -->
                 <xinge.enviroment>2</xinge.enviroment>
+                <app.uploadimage.up>/data/apps/fxmob/files/</app.uploadimage.up>
+                <app.uploadimage.path>http://fxmob.dev.galaxyinternet.com/files/</app.uploadimage.path>
 			</properties>
 		</profile>
 			
