--- a/galaxy-mobile-sop-server/src/main/resources/dubbo/dubbo.properties
+++ b/galaxy-mobile-sop-server/src/main/resources/dubbo/dubbo.properties
@@ -14,4 +14,5 @@ dubbo.protocol.heartbeat=0
 
 project.server.url=${project.server.url}
 sop.oss.tempfile.path=${sop.oss.tempfile.path}
-galaxy.project.sop.endpoint=${galaxy.project.sop.endpoint}
+app.uploadimage.up=${app.uploadimage.up}
+app.uploadimage.path=${app.uploadimage.path}
