--- a/galaxy-mobile-sop-server/pom.xml
+++ b/galaxy-mobile-sop-server/pom.xml
@@ -99,6 +99,8 @@
 				<galaxy.project.report.endpoint>http://zijian.local.com/mobileReport/</galaxy.project.report.endpoint>
 				<galaxy.project.sop.endpoint>http://zijian.local.com/mobileSop/</galaxy.project.sop.endpoint>
 				<xinge.enviroment>2</xinge.enviroment>
+				<app.uploadimage.up>/data/apps/fxmob/files/</app.uploadimage.up>
+                <app.uploadimage.path>http://fxmob.dev.galaxyinternet.com/files/</app.uploadimage.path>
 			</properties>
 		</profile>
 		
@@ -211,6 +213,8 @@
 				<galaxy.project.report.endpoint>http://fxmob.qa.galaxyinternet.com/mobileReport/</galaxy.project.report.endpoint>
 				<galaxy.project.sop.endpoint>http://fxmob.qa.galaxyinternet.com/mobileSop/</galaxy.project.sop.endpoint>
 				<xinge.enviroment>2</xinge.enviroment>
+				<app.uploadimage.up>/data/apps/fxmob/files/</app.uploadimage.up>
+                <app.uploadimage.path>http://fxmob.dev.galaxyinternet.com/files/</app.uploadimage.path>
 			</properties>
 		</profile>
 		<profile>
