--- a/galaxy-mobile-sop-server/sa.properties
+++ b/galaxy-mobile-sop-server/sa.properties
@@ -14,5 +14,6 @@ sop.oss.tempfile.path=${sop.oss.tempfile.path}
 galaxy.project.platform.endpoint=${galaxy.project.platform.endpoint}
 galaxy.project.report.endpoint=${galaxy.project.report.endpoint}
 galaxy.project.sop.endpoint=${galaxy.project.sop.endpoint}
+xinge.enviroment=${xinge.enviroment}
 app.uploadimage.up=${app.uploadimage.up}
 app.uploadimage.path=${app.uploadimage.path}
