--- a/galaxy-mobile-sop-server/pom.xml
+++ b/galaxy-mobile-sop-server/pom.xml
@@ -521,6 +521,14 @@
 			<artifactId>xingePush</artifactId>
 			<version>[1.0.0,)</version>
 		</dependency>
+		
+		
+		<!--获取数据  -->
+		<dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpasyncclient</artifactId>
+            <version>4.1.1</version>
+        </dependency>
 	</dependencies>
 	
 </project>
