--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.galaxyinternet</groupId>
   <artifactId>galaxy-mobile-sop</artifactId>
-  <version>1.0.3.mobile</version>
+  <version>1.0.3.mobile-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name/>
   <url/>
