--- a/galaxy-mobile-sop-server/pom.xml
+++ b/galaxy-mobile-sop-server/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.galaxyinternet</groupId>
     <artifactId>galaxy-mobile-sop</artifactId>
 
-    <version>1.0.3.mobile-SNAPSHOT</version>
+    <version>1.0.3.mobile</version>
   </parent>
   <artifactId>galaxy-mobile-sop-server</artifactId>
   <packaging>war</packaging>
@@ -14,7 +14,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.2.1.RELEASE</spring.version>	
-        <dependency.project>1.0.3.mobile-SNAPSHOT</dependency.project>  
+        <dependency.project>1.0.3.mobile</dependency.project>  
 	</properties>
 	
 	<repositories>
