dev修改演示环境

--- a/galaxy-mobile-sop-server/pom.xml
+++ b/galaxy-mobile-sop-server/pom.xml
@@ -153,17 +153,17 @@
 			<properties>
 				<!-- 开发数据库 -->
 				<jdbc.url>
-					jdbc:mysql://10.9.11.232:3306/fx_db?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf8
+					jdbc:mysql://10.11.8.36:3306/fx_db?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf8
 				</jdbc.url>				
 				<jdbc.username>fxuser</jdbc.username>
-				<jdbc.password>fxdb_Fp9EPkG2</jdbc.password>
+				<jdbc.password>qrcYkO2Vxt</jdbc.password>
 				<!-- 本地项目地址 -->
 				<log4j.path>${catalina.base}/logs/</log4j.path>
 				<sop.oss.tempfile.path>/data/apps/osstemp/</sop.oss.tempfile.path>
 				<!-- dubbo -->
 				<dubbo.application.name>galaxySopDubboProvider</dubbo.application.name>
 				<dubbo.protocol.name>dubbo</dubbo.protocol.name>
-				<dubbo.registry.address>zookeeper://10.9.210.22:12184?client=zkclient</dubbo.registry.address>
+				<dubbo.registry.address>zookeeper://10.11.8.36:2181?client=zkclient</dubbo.registry.address>
 				<dubbo.protocol.port>8082</dubbo.protocol.port>
 
 				<project.server.url>http://fxmob.dev.galaxyinternet.com/</project.server.url>
