--- a/galaxy-mobile-sop-server/pom.xml
+++ b/galaxy-mobile-sop-server/pom.xml
@@ -13,7 +13,8 @@
 	<description />
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring.version>4.2.1.RELEASE</spring.version>	
+		<spring.version>4.2.1.RELEASE</spring.version>
+		<dependency.project>1.0.3.mobile</dependency.project>  	
 	</properties>
 	
 	<repositories>
